# behavysis_core

./: .gitignore  404.html  README.md  conda_env.yaml  frontmatter.json  index.html  objects.inv  pyproject.toml
ba_core/data_models/: bouts.py  experiment_configs.py  vid_metadata.py
ba_core/mixins/: behaviour_mixin.py  df_io_mixin.py  diagnostics_mixin.py  io_mixin.py  keypoints_mixin.py  process_vid_mixin.py  pydantic_model_mixin.py  subprocess_mixin.py
ba_core/utils/: __init__.py  constants.py
behavysis_core/: ._constants.py  constants.py
behavysis_core/data_models/: bouts.py  experiment_configs.py  pydantic_base_model.py  vid_metadata.py
behavysis_core/df_classes/: analyse_agg_df.py  analyse_binned_df.py  analyse_combine_df.py  analyse_combined_df.py  analyse_df.py  behav_df.py  bouts_df.py  df_mixin.py  features_df.py  keypoints_df.py
behavysis_core/df_mixins/: behav_df_mixin.py  bouts_df_mixin.py  df_io_mixin.py  df_mixin.py  features_df_mixin.py  keypoints_df_mixin.py
behavysis_core/mixins/: behav_df_mixin.py  behav_mixin.py  behaviour_mixin.py  bouts_df_mixin.py  bouts_mixin.py  df_io_mixin.py  diagnostics_mixin.py  features_df_mixin.py  features_mixin.py  io_mixin.py  keypoints_df_mixin.py  keypoints_mixin.py  misc_mixin.py  multiproc_mixin.py  process_vid_mixin.py  subproc_mixin.py  subprocess_mixin.py
diagnostics_messages/: diagnostics_messages.html
documentation/: mkdocs.yml
documentation/docs/: index.md
reference/: ba_core.html
search/: search_index.js  search_index.json
tests/: test_all.py
tutorials/: explanation.html  setup.html
(+32 files in other folders)
